--- a/react/iframe.html
+++ b/react/iframe.html
@@ -368,7 +368,7 @@
   };
 </script>
 
-    <script type="module" crossorigin src="https://alekangelov.github.io/icarus/assets/iframe.23fd4fa7.js"></script>
+    <script type="module" crossorigin src="https://alekangelov.github.io/icarus/react/assets/iframe.48459ab8.js"></script>
   <style>
     .sb-show-preparing-story:not(.sb-show-main) > :not(.sb-preparing-story) {
       display: none;
