--- a/react/iframe.html
+++ b/react/iframe.html
@@ -368,7 +368,7 @@
   };
 </script>
 
-    <script type="module" crossorigin src="https://alekangelov.github.io/icarus/react/assets/iframe.48459ab8.js"></script>
+    <script type="module" crossorigin src="/icarus/react/assets/iframe.4db0f949.js"></script>
   <style>
     .sb-show-preparing-story:not(.sb-show-main) > :not(.sb-preparing-story) {
       display: none;
